Fredericia: Height property and overflows banner fix

--- a/web/themes/custom/fds_fredericia_main_theme/src/styles/theme/components/_status-banner.scss
+++ b/web/themes/custom/fds_fredericia_main_theme/src/styles/theme/components/_status-banner.scss
@@ -64,12 +64,12 @@
 .status-bar-wrapper {
   display: flex;
   align-items: center;
-  min-height: 45px;
   transition: .4s ease;
   position: relative;
   z-index: 2;
   width: 100%;
   max-height: fit-content;
+  overflow: hidden;
 
   &.initial-closed {
     transition: none;
